# Crud-Api-with-rust

./: Cargo.toml  README.md  Readme
src/: db.rs  handlers.rs  main.rs  router.rs  routes.rs
src/handlers/: controls.rs  mod.rs  models.rs
