[package]
name = "Lume-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"]} # para funcionar o async
axum = "0.8" # FrameWork Web
serde = {version ="1.0", features = ["derive"]} #Para serializer/desserializar JSON
serde_json = "1.0" #JSON
mongodb =  "3.2"
dotenv = "0.15"